force-app/main/default/objects/Opportunity/fields/CADAmount__c.field-meta.xml
<CustomField>
    <fullName>CADAmount__c</fullName>
    <label>CAD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>