force-app/main/default/objects/Opportunity/fields/MXNAmount__c.field-meta.xml
<CustomField>
    <fullName>MXNAmount__c</fullName>
    <label>MXN Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>