force-app/main/default/objects/Opportunity/fields/USDAmount__c.field-meta.xml
<CustomField>
    <fullName>USDAmount__c</fullName>
    <label>USD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>